<resources>
    <string name="app_name">MyLaundry</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="hint_email">E-MAIL</string>
    <string name="hint_login_pwd">Login Password</string>
    <string name="hint_pwd">Password</string>
    <string name="hint_comfirm_pwd">Comfirm Password</string>
    <string name="click_here_to_register">No account? Click here to register.</string>
    <string name="click_here_to_login">Click here back to login.</string>
    <string name="click_forget">Forget password?</string>
    <string name="title_name">Name : </string>
    <string name="title_machine_id">Machine ID : </string>
    <string name="title_send">Send</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_choose_dates">Choose Dates</string>
    <string name="tv_title_forget_password">Forget Password</string>
    <string name="tv_msg_forget_password">password reset has sent to your email, please check it latter</string>
    <string name="comfirm_ok">OK</string>
    <string name="comfirm_cancel">Cancel</string>
    <string name="tv_logout">Logout</string>

    <string name="tv_title_reloading">Reload...</string>
    <string name="btn_title_notify">Notify Free</string>
    <string name="tv_title_notice">Notice</string>
    <string name="tv_title_fill_in">Please fill in all fields</string>
    <string name="tv_title_error">Error</string>
    <string name="tv_title_login_error">Login Error!\n Please Check your Email and Password</string>
    <string name="tv_error_pwd_comfirm">password confirmation does not match </string>
    <string name="tv_title_register_error">Email Conflict Please Check</string>
    <string name="tv_title_sorry">Sorry I cannot help you</string>

    <string name="n_contect_name">Name</string>
    <string name="n_contect_phone">Phone Number</string>
    <string name="n_contect_email">Email</string>
    <string name="n_contect_other_info">Other Info</string>
    <string name="n_contect_use_account_info">Use Account Info</string>
    <string name="n_contect_remember">Remember Info</string>
    <string name="txt0000000012345615">清齋2F</string>
    <string name="txt0000000012345617">鴻齋2F</string>
    <string name="txt0000000012345618">平齋2F</string>
    <string name="txt0000000012345670">明齋2F</string>
</resources>
