<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gradient_end">

    <ImageView
        android:id="@+id/img_head_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/logo"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="10%"
        />

    <RelativeLayout
        android:id="@+id/rl_login_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/transp_white"
        android:layout_below="@id/img_head_icon"
        app:layout_widthPercent="70%"
        >

        <TextView
            android:id="@+id/tv_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginLeft="@dimen/size_10"
            android:text="@string/title_login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_xl"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_alignStart="@+id/tv_title_login"
            android:layout_alignLeft="@+id/tv_title_login"
            android:layout_below="@id/tv_title_login"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            style="@style/edittext_white_corner"
            />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_alignStart="@+id/tv_title_login"
            android:layout_alignLeft="@+id/tv_title_login"
            android:layout_below="@id/et_email"
            android:hint="@string/hint_login_pwd"
            android:inputType="textPassword"
            style="@style/edittext_white_corner"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_pwd"
            android:padding="@dimen/size_10">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/size_90"
                android:layout_height="@dimen/size_40"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/size_10"
                android:text="@string/title_login"
                android:textColor="@android:color/white"
                android:src="@mipmap/btn_black"/>
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transp_black"
        android:layout_below="@+id/rl_login_panel"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/size_10">
        <TextView
            android:id="@+id/tv_title_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here_to_register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_m"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/size_5"
            android:layout_marginBottom="@dimen/size_5"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/tv_title_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_forget"
            android:layout_below="@id/tv_title_register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_m"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/size_5"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

</android.support.percent.PercentRelativeLayout>