<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_marginLeft="@dimen/size_40"
                android:layout_marginRight="@dimen/size_40"
                android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/RLHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            tools:text="@string/tv_title_forget_password"
            android:textColor="@color/transp_black"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginStart="@dimen/size_20"
            android:textSize="@dimen/text_size_s" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/title_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_below="@id/RLHeader"
        android:background="@color/color_dialog_divider_gray" >
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_divider" >

        <RelativeLayout
            android:id="@+id/rl_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_20"
                android:textColor="@android:color/black"
                android:layout_centerInParent="true"
                android:textSize="@dimen/text_size_s"/>
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll_btn_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1"
            android:layout_below="@+id/rl_content"
            android:layout_centerHorizontal="true"
            android:background="@color/color_dialog_divider_gray"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/btConfirm"
            style="@style/button_dialog"
            android:layout_below="@+id/ll_btn_divider"
            android:layout_toLeftOf="@+id/ll_btn_center"
            android:layout_toStartOf="@id/ll_btn_center"
            android:text="@string/comfirm_ok" />
        
        <LinearLayout
            android:id="@id/ll_btn_center"
            android:layout_width="@dimen/size_1"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/btConfirm"
            android:layout_below="@+id/ll_btn_divider"
            android:layout_centerHorizontal="true"
            android:background="@color/color_dialog_divider_gray"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/btCancel"
            style="@style/button_dialog"
            android:layout_below="@id/ll_btn_divider"
            android:layout_toEndOf="@id/ll_btn_center"
            android:layout_toRightOf="@id/ll_btn_center"
            android:text="@string/comfirm_cancel" />
    </RelativeLayout>

</RelativeLayout>